--- a/documents/refs.bib
+++ b/documents/refs.bib
@@ -39,3 +39,68 @@
   author       = {Smith, Jordan},
   howpublished = {\url{http://algolist.ru/maths/geom/convhull/qhull3d.php}}
 }
+
+@article{brun:hal-00955400,
+  title       = {{Designing and proving correct a convex hull algorithm with hypermaps in Coq}},
+  author      = {Brun, Christophe and Dufourd, Jean-Fran{\c c}ois and Magaud, Nicolas},
+  url         = {https://hal.inria.fr/hal-00955400},
+  journal     = {{Computational Geometry}},
+  publisher   = {{Elsevier}},
+  volume      = {45},
+  number      = {8},
+  pages       = {436-457},
+  year        = {2012},
+  month       = Oct,
+  doi         = {10.1016/j.comgeo.2010.06.006},
+  keywords    = {convex hull ; hypermaps ; formal specifications ; computer-aided proofs ; Coq system},
+  pdf         = {https://hal.inria.fr/hal-00955400/file/CGTA2012-BrunDufourdMagaud.pdf},
+  hal_id      = {hal-00955400},
+  hal_version = {v1}
+}
+
+@inproceedings{brun:hal-00916880,
+  title       = {{Formal Proof in Coq and Derivation of a Program in C++ to Compute Convex Hulls}},
+  author      = {Brun, Christophe and Dufourd, Jean-Fran{\c c}ois and Magaud, Nicolas},
+  url         = {https://hal.inria.fr/hal-00916880},
+  booktitle   = {{Automated Deduction in Geometry (Post-proceedings)}},
+  address     = {Edinbourg, United Kingdom},
+  editor      = {Jacques Fleuriot \& Testsuo Ida},
+  publisher   = {{Springer}},
+  series      = {LNCS},
+  pages       = {71-88},
+  year        = {2012},
+  month       = Sep,
+  doi         = {10.1007/978-3-642-40672-0\_6},
+  keywords    = {convex hull ; hypermaps ; formal specifications ; computer-aided proofs ; Coq system ; program derivation},
+  pdf         = {https://hal.inria.fr/hal-00916880/file/CH-submitted2011.pdf},
+  hal_id      = {hal-00916880},
+  hal_version = {v1}
+}
+
+@misc{coqref,
+  title        = {The Coq Proof Assistant Reference Manual, Version 8.11.0},
+  url          = {https://coq.inria.fr/refman/},
+  year         = {2020},
+  author       = {Coq development team},
+  howpublished = {\url{https://coq.inria.fr/refman/}}
+}
+
+@article{jeffreywortman,
+  author  = {White, Jeffrey and Wortman, Kevin},
+  year    = {2012},
+  month   = {05},
+  pages   = {},
+  title   = {Divide-and-Conquer 3D Convex Hulls on the GPU},
+  journal = {Proceedings of the 24th Canadian Conference on Computational Geometry, CCCG 2012}
+}
+
+@misc{https://doi.org/10.48550/arxiv.1205.1171,
+  doi       = {10.48550/ARXIV.1205.1171},
+  url       = {https://arxiv.org/abs/1205.1171},
+  author    = {White, Jeffrey M. and Wortman, Kevin A.},
+  keywords  = {Distributed, Parallel, and Cluster Computing (cs.DC), Computational Geometry (cs.CG), FOS: Computer and information sciences, FOS: Computer and information sciences, I.3.5; D.1.3},
+  title     = {Divide-and-Conquer 3D Convex Hulls on the GPU},
+  publisher = {arXiv},
+  year      = {2012},
+  copyright = {Creative Commons Attribution 3.0 Unported}
+}
