Dernier commit avancée rapport

--- a/documents/refs.bib
+++ b/documents/refs.bib
@@ -104,3 +104,15 @@
   year      = {2012},
   copyright = {Creative Commons Attribution 3.0 Unported}
 }
+
+@book{casteran:hal-00344237,
+  title       = {{Interactive theorem proving and program development. Coq'Art: The Calculus of inductive constructions.}},
+  author      = {Cast{\'e}ran, Pierre and Bertot, Yves},
+  url         = {https://hal.archives-ouvertes.fr/hal-00344237},
+  publisher   = {{Springer Verlag}},
+  series      = {Texts in Theoretical Computer Science},
+  pages       = {470},
+  year        = {2004},
+  hal_id      = {hal-00344237},
+  hal_version = {v1}
+}
